Added licence disc scanning and bluetooth receipt printing functionality

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -82,6 +82,9 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    buildFeatures {
+        dataBinding true
+    }
     signingConfigs {
         debug {
             storeFile file('debug.keystore')
@@ -108,6 +111,7 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
     implementation project(':react-native-vision-camera')
+    implementation 'com.yoco:payment-ui:2.4.1'
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
