--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "axios": "^1.7.2",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-ble-plx": "^3.2.1",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-ping": "^1.2.8",
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-svg": "^15.3.0",
+    "react-native-thermal-receipt-printer-image-qr": "^0.1.11",
     "react-native-vector-icons": "^10.1.0",
     "react-native-vision-camera": "^4.4.1",
     "react-redux": "^9.1.2"
