--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FarmyardEntryApp",
+  "name": "farmyard-entry-app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -17,7 +17,8 @@
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "react": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "^0.74.3",
+    "react-native-addpay": "^1.0.1",
     "react-native-ble-plx": "^3.2.1",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-linear-gradient": "^2.8.3",
@@ -49,7 +50,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.5.4"
   },
   "engines": {
     "node": ">=18"
